# visse-app

./: .gitignore  Containerfile  Makefile  README.md  TODO.org  main.py  package-lock.json  package.json  pyproject.toml
assets/: container.cpu.conf  container.gpu.conf  darknet.cpu.patch  darknet.gpu.patch
backend/: descriptions.py  main.py
frontend/: hand.js  hand.jsx  index.html  index.jsx  manifest.json  style.css  tailwind.config.cjs
frontend/assets/: mano.blend  mano.glb
frontend/img/: mano.glb
src/: index.html  index.jsx  style.css  tailwind.config.cjs
