[project]
name = "visse-backend"
description = "VisSE App Backend"
version = "1.2.0"
authors = [
    { name = "Antonio F. G. Sevilla", email = "afgs@ucm.es" }
]
license = {text = "OSL-3.0"}
readme = "README.md"
requires-python = "~=3.9.0"
dependencies = [
    "quevedo~=1.2.0",
    "uvicorn~=0.15.0",
    "fastapi~=0.70.0",
    "python-multipart~=0.0.5",
]

[project.urls]
Homepage = "https://www.ucm.es/visse"
Repository = "https://github.com/agarsev/visse-app"

[project.scripts]
visse-backend = 'backend.main:run'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.hatch.build.targets.sdist]
packages = ["backend"]
